pagina principal adecuada para admitir mas paginas

--- a/src/app/Components/searchbar/searchbar.component.html
+++ b/src/app/Components/searchbar/searchbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col w-screen h-screen justify-start items-center bg-slate-300 ">
+<div class="flex flex-col w-full h-full justify-start items-start">
     <!--COMPONENT: SEARCH BAR-->
     <div class="flex w-10/12 h-16 rounded justify-between mt-10 bg-slate-50">
         <!--BUTTONS: CREATE AND REFRESH-->
