--- a/src/app/pages/information-panel/information-panel.component.html
+++ b/src/app/pages/information-panel/information-panel.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full flex flex-col justify-center items-center content-center">
+<div class="flex flex-col w-full h-full justify-center items-center content-center">
     <img src="../../../assets/logo-billfast.png">
     <p class=" text-7xl font-light py-5">BillFast </p>
     <p class=" text-7xl font-light">Sistema Comercial</p>
