--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,9 +1,8 @@
-<div id="" class="flex bg-gray-200">
+<div id="" class="relative flex w-full z-20">
     <app-side-nav></app-side-nav>
     <app-header></app-header>
     <app-footer></app-footer>
-    <div class="flex flex-col w-full items-center content-center justify-center">
+    <div class="absolute _ind overflow-y-scroll left-64 right-0 top-16 bottom-16 bg-gray-200">
         <app-information-panel></app-information-panel>
     </div>
-    
 </div>
