--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<aside class="w-64 h-screen bg-white" aria-label="Sidebar">
+<aside #SideNav class="w-64 h-screen bg-white bottom-0">
   <div class="overflow-y-auto py-4 px-3 rounded-r">
     <!--============================-->
     <!--MENU DEL SIDENAV-->
