--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,8 +1,9 @@
-<div id="" class="relative flex w-full z-20">
+<div id="" class="relative flex w-full z-10 bg-gray-200">
     <app-side-nav></app-side-nav>
     <app-header></app-header>
     <app-footer></app-footer>
-    <div class="absolute _ind overflow-y-scroll left-64 right-0 top-16 bottom-16 bg-gray-200">
-        <app-information-panel></app-information-panel>
+    <div class="absolute _ind overflow-y-scroll left-64 right-0 top-16 bottom-16">
+        <!-- <app-information-panel></app-information-panel> -->
+        <app-facturas></app-facturas>
     </div>
 </div>
