--- a/src/app/Components/searchbar/searchbar.component.html
+++ b/src/app/Components/searchbar/searchbar.component.html
@@ -9,8 +9,8 @@
         <!--END BUTTONS: CREATE AND REFRESH-->
         <!--INPUT SEARCH-->
         <div class="flex w-4/12 text-white items-center relative mx-5">
-            <input type="search" id="" class="relative outline-none block rounded-l-sm autofo p-2.5 w-full text-sm dark:bg-gray-200 text-black " placeholder="Buscar..." required>
-        <button type="submit" class="top-0 right-0 p-2.5 z-10 text-sm font-medium text-white rounded-r-sm   border-slate-700 hover:bg-slate-800 focus:ring-4 focus:outline-none dark:bg-slate-600 dark:hover:bg-slate-700 transition ease-in delay-150 hover:scale-105 duration-105"><svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns=""><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg></button>
+            <input type="search" id="" class="relative outline-none block rounded-l-sm autofo p-2.5 w-full text-sm dark:bg-gray-200 text-black " placeholder="Buscar..." required [(ngModel)]="textWritten" (keyup)="searchText()">
+        <button (click)="searchText()" type="submit" class="top-0 right-0 p-2.5 z-10 text-sm font-medium text-white rounded-r-sm   border-slate-700 hover:bg-slate-800 focus:ring-4 focus:outline-none dark:bg-slate-600 dark:hover:bg-slate-700 transition ease-in delay-150 hover:scale-105 duration-105"><svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns=""><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg></button>
         </div>
         <!--END INPUT SEARCH-->
     </div>
