--- a/src/app/pages/Transacciones/facturas/facturas.component.html
+++ b/src/app/pages/Transacciones/facturas/facturas.component.html
@@ -1,6 +1,6 @@
 <div class="max-w-full h-full justify-start items-start mt-5 mr-5 ml-5">
     <p class="text-3xl text-gray-500">Facturas</p>
-    <app-searchbar></app-searchbar>
+    <app-searchbar (searchTextEmited)="reciveTextEmited($event)"></app-searchbar>
     <div class="mt-5">
         <table id="table" class="table-auto w-full text-sm text-left bg-white text-black cursor-default">
             <thead>
@@ -14,14 +14,17 @@
                     <th>Acciones</th>
                 </tr>
               </thead>
-              <tbody *ngFor="let data of datas" [ngSwitch]="1">
-                  <tr>
-                    <td>77551</td>
-                    <td>OSCAR CUEVA</td>
-                    <td>C/CENTRAL SABANA PERDIDA NO. 0 BRISA DE LOS PALMARES SABANA PERDIDA NO. 0 SECTOR 3 (SABANAPERDIDA) SABANA PERDIDA, SANTO DOMINGO NORTE, SANTO DOMINGO, Postal Code 11201</td>
-                    <td>05 dic, 2022</td>
-                    <td>100.00</td>
-                    <td><span *ngSwitchCase="1" class="bg-red-600 rounded text-white text-xs p-0.5">Anulado</span></td>
+              <tbody>
+                  <tr *ngFor="let data of invoiceRecords | filter:textOfSearchBar"  [ngSwitch]="data.status">
+                    <td>{{data.id}}</td>
+                    <td>{{data.name}}</td>
+                    <td>{{data.billingAddress}}</td>
+                    <td>{{data.date}}</td>
+                    <td>{{data.total}}</td>
+                    <td>
+                        <span *ngSwitchCase="anulado" class="bg-red-600 rounded text-white text-xs p-0.5">{{data.status}}</span>
+                        <span *ngSwitchCase="facturado" class="bg-blue-600 rounded text-white text-xs p-0.5">{{data.status}}</span>
+                    </td>
                     <td>
                         <div class=" relative flex justify-between items-center content-center bg-slate-50 hover:bg-slate-200 p-1 rounded cursor-pointer" (click)="toogleActionMenu()">
                             <p class="justify-center text-sm px-1">Acciones</p>
@@ -45,21 +48,6 @@
                         </div>
                     </td>
                   </tr>
-                  <tr>
-                    <td>77551</td>
-                    <td>OSCAR CUEVA</td>
-                    <td>C/CENTRAL SABANA PERDIDA NO. 0 BRISA DE LOS PALMARES SABANA PERDIDA NO. 0 SECTOR 3 (SABANAPERDIDA) SABANA PERDIDA, SANTO DOMINGO NORTE, SANTO DOMINGO, Postal Code 11201</td>
-                    <td>05 dic, 2022</td>
-                    <td>100.00</td>
-                    <td><span *ngSwitchCase="1" class="bg-cyan-500 rounded text-white text-xs p-0.5">Facturado</span></td>
-                    <td>
-                        <div class="flex justify-between items-center content-center bg-slate-50 hover:bg-slate-200 p-1 rounded cursor-pointer">
-                            <p class="justify-center text-sm px-1">Acciones</p>
-                            <i class="fa-solid fa-chevron-down px-1"></i>
-                        </div>
-                    </td>
-                  </tr>
-                 
               </tbody>
         </table>
 
