--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -1,172 +1,199 @@
 <aside #SideNav class="w-64 h-screen bg-white bottom-0">
-  <div class="overflow-y-auto py-4 px-3 rounded-r">
-    <!--============================-->
-    <!--MENU DEL SIDENAV-->
-    <ul class="space-y-2">
+    <div class="overflow-y-auto h-screen py-4 px-3 rounded-r">
         <!--============================-->
-        <!--LOGO-->
-        <li>
-            <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 mb-5">   
-                    <img src="../../../assets/logo-billfast.png" class="w-9 h-9"> 
+        <!--MENU DEL SIDENAV-->
+        <ul class="space-y-2">
+            <!--============================-->
+            <!--LOGO-->
+            <li>
+                <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 mb-5">
+                    <img src="../../../assets/logo-billfast.png" class="w-9 h-9" />
                     <span class="ml-3 text-lg">BillFast</span>
-            </a>
-        </li>
-         <!--END LOGO-->
-         <!--============================-->
-
-         <!--============================-->
-         <!--PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
-        <li>
-            <a routerLink="" class="flex items-center justify-between w-full px-5 py-2 mb-5 rounded transition duration-75 group  hover:bg-gray-300">
-                <div>
-                    <i class="fa-solid fa-table-cells"></i>
-                    <span class="ml-3">Panel informativo</span>
-                </div>
-            </a>
-        </li>
-        <li> 
-            <span class="ml-4 text-sm">Transacciones</span>
-        </li>
-         <!--============================-->
-         <!--END PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
-
-         <!--============================-->
-         <!--MENU TRANSACCIONES-->
-        <li>
-            <button type="button" (click)="dropdown()" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                <div>
-                    <i class="fa-solid fa-money-bill-transfer"></i> 
-                    <span class="ml-3" >Transacciones</span>
-                </div>
-                <i class="fa-solid fa-chevron-left"></i>
-            </button>
-            <!--============================-->
-            <!--SUBMENU TRANSACCIONES-->
-            <ul #subMenuTransacciones class="hidden space-y-2 text-zinc-700" *ngFor="let transaccion of Transacciones | ObjToArray">
-                <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                        <i class="{{transaccion.icon}}"></i>
-                            <span class="ml-5 ">{{transaccion.name}}</span>
-                    </a>
-                </li>
-            </ul>
-            <!--END SUBMENU TRANSACCIONES-->
-            <!--============================-->
-        </li>
-        <!--END MENU TRANSACCIONES-->
+                </a>
+            </li>
+            <!--END LOGO-->
             <!--============================-->
 
-         <!--============================-->
-         <!--MENU CATALOGOS-->
-        <li>
-            <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                <div>
-                    <i class="fa-solid fa-box-archive"></i>
-                    <span class="ml-3">Catálogos</span>
-                </div>
-                <i class="fa-solid fa-chevron-left"></i>
-            </a>
             <!--============================-->
-            <!--SUBMENU CATALOGOS-->
-            <ul class="hidden space-y-2 text-zinc-700"  *ngFor="let catalogo of Catalogos | ObjToArray">
-                <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                        <i class={{catalogo.icon}}></i>
-                        <span class="ml-5 ">{{catalogo.name}}</span>
-                    </a>
-                </li>     
-            </ul>
-             <!--END SUBMENU CATALOGOS-->
-             <!--============================-->
-        </li>
-         <!--END MENU CATALOGOS-->
-         <!--============================-->
+            <!--PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
+            <li>
+                <a routerLink=""
+                    class="flex items-center justify-between w-full px-5 py-2 mb-5 rounded transition duration-75 group hover:bg-gray-300">
+                    <div>
+                        <i class="fa-solid fa-table-cells"></i>
+                        <span class="ml-3">Panel informativo</span>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <span class="ml-4 text-sm">Transacciones</span>
+            </li>
+            <!--============================-->
+            <!--END PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
 
-         <!--============================-->
-         <!--MENU SERVICIO AL CLIENTE-->
-        <li>
-            <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                <div>
-                    <i class="fa-solid fa-face-smile"></i> 
-                    <span class="ml-3">Servicio al cliente</span>
-                </div>
-                <i class="fa-solid fa-chevron-left"></i>
-            </a>
             <!--============================-->
-            <!-- SUBMENU SERVICIO AL CLIENTE-->
-            <ul class="hidden space-y-2 text-zinc-700" *ngFor="let servicioAlCliente of ServicioAlCliente | ObjToArray">
-                <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                        <i class={{servicioAlCliente.icon}}></i>
-                        <span class="ml-5 ">{{servicioAlCliente.name}}</span>
-                    </a>
-                </li>
-            </ul>
-            <!--END SUBMENU SERVICIO AL CLIENTE-->
+            <!--MENU TRANSACCIONES-->
+            <li>
+                <button type="button" (click)="dropdownTransactionMenu()"
+                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300">
+                    <div>
+                        
+                        <i class="fa-solid fa-money-bill-transfer"></i>
+                        <span class="ml-3">Transacciones</span>
+                    </div>
+                    <i class="fa-solid fa-chevron-left" *ngIf="!expandedDictionary[0]"></i>
+                    <i class="fa-solid fa-chevron-down px-1" *ngIf="expandedDictionary[0]"></i>
+                </button>
+                <!--============================-->
+                <!--SUBMENU TRANSACCIONES-->
+                <ul #subMenuTransactions class="hidden space-y-2 text-zinc-700">
+                    <li *ngFor="let transaccion of Transacciones | ObjToArray">
+                        <a routerLink="" type="button"
+                            class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
+                            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                            <i class="{{ transaccion.icon }}"></i>
+                            <span class="ml-5">{{ transaccion.name }}</span>
+                        </a>
+                    </li>
+                </ul>
+                <!--END SUBMENU TRANSACCIONES-->
+                <!--============================-->
+            </li>
+            <!--END MENU TRANSACCIONES-->
             <!--============================-->
-        </li>
-         <!--END MENU SERVICIO AL CLIENTE-->
-         <!--============================-->
 
-         <!--============================-->
-         <!--MENU GESTION TRABAJO-->
-        <li>
-            <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                <div>
-                    <i class="fa-solid fa-box-archive"></i>
-                    <span class="ml-3">Gestión del trabajo</span>
-                </div>
-                <i class="fa-solid fa-chevron-left"></i>
-            </a>
             <!--============================-->
-            <!-- SUBMENU GESTION TRABAJO-->
-            <ul class="hidden space-y-2 text-zinc-700" *ngFor="let gestionDeTrabajo of GestionDeTrabajo | ObjToArray" >
-                <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                        <i class={{gestionDeTrabajo.icon}}></i>
-                        <span class="ml-5 ">{{gestionDeTrabajo.name}}</span>
-                    </a>
-                </li>
-            </ul>
-            <!--END SUBMENU GESTION DE TRABAJO-->
+            <!--MENU CATALOGOS-->
+            <li>
+                <a routerLink="" type="button" (click)="dropdownCatalogueMenu()"
+                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <div>
+                        <i class="fa-solid fa-box-archive"></i>
+                        <span class="ml-3">Catálogos</span>
+                    </div>
+                    <i class="fa-solid fa-chevron-left" *ngIf="showChevronLeft"></i>
+                    <i class="fa-solid fa-chevron-down px-1" *ngIf="showChevronDown"></i>
+                </a>
+                <!--============================-->
+                <!--SUBMENU CATALOGOS-->
+                <ul #subMenuCatalogue class="hidden space-y-2 text-zinc-700">
+                    <li *ngFor="let catalogo of Catalogos | ObjToArray">
+                        <a routerLink="" type="button"
+                            class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
+                            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                            <i class="{{ catalogo.icon }}"></i>
+                            <span class="ml-5">{{ catalogo.name }}</span>
+                        </a>
+                    </li>
+                </ul>
+                <!--END SUBMENU CATALOGOS-->
+                <!--============================-->
+            </li>
+            <!--END MENU CATALOGOS-->
             <!--============================-->
-        </li>
-         <!--END MENU GESTION DE TRABAJO-->
-         <!--============================-->
 
-        <!--============================-->
-        <!-- MENU PLANIFICACION-->
-        <li>
-            <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                <div>
-                    <i class="fa-solid fa-box-archive"></i>
-                    <span class="ml-3">Planificación</span>
-                </div>
-                <i class="fa-solid fa-chevron-left"></i>
-            </a>
             <!--============================-->
-            <!-- SUBMENU PLANIFICACION-->
-            <ul class="hidden space-y-2 text-zinc-700" *ngFor="let planificacion of Planificacion | ObjToArray">
-                <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                        <i class={{planificacion.icon}}></i>
-                        <span class="ml-5 ">{{planificacion.name}}</span>
-                    </a>
-                </li>
-            </ul>
-            <!-- END SUBMENU PLANIFICACION-->
+            <!--MENU SERVICIO AL CLIENTE-->
+            <li>
+                <a routerLink="" type="button" (click)="dropdownCustomerServiceMenu()"
+                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300">
+                    <div>
+                        <i class="fa-solid fa-face-smile"></i>
+                        <span class="ml-3">Servicio al cliente</span>
+                    </div>
+                    <i class="fa-solid fa-chevron-left" *ngIf="showChevronLeft"></i>
+                    <i class="fa-solid fa-chevron-down px-1" *ngIf="showChevronDown"></i>
+                </a>
+                <!--============================-->
+                <!-- SUBMENU SERVICIO AL CLIENTE-->
+                <ul #subMenuCustomerService class="hidden space-y-2 text-zinc-700" >
+                    <li *ngFor="let servicioAlCliente of ServicioAlCliente | ObjToArray">
+                        <a routerLink="" type="button"
+                            class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
+                            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                            <i class="{{ servicioAlCliente.icon }}"></i>
+                            <span class="ml-5">{{ servicioAlCliente.name }}</span>
+                        </a>
+                    </li>
+                </ul>
+                <!--END SUBMENU SERVICIO AL CLIENTE-->
+                <!--============================-->
+            </li>
+            <!--END MENU SERVICIO AL CLIENTE-->
             <!--============================-->
-        </li>
-        <!-- END MENU PLANIFICACION-->
-        <!--============================-->
-        <li>
-            <a routerLink="" type="button" class="flex items-center w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                    <i class="fa-solid fa-print"></i> 
+
+            <!--============================-->
+            <!--MENU GESTION TRABAJO-->
+            <li>
+                <a routerLink="" type="button" (click)="dropdownWorkManagementMenu()"
+                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <div>
+                        <i class="fa-solid fa-box-archive"></i>
+                        <span class="ml-3">Gestión del trabajo</span>
+                    </div>
+                    <i class="fa-solid fa-chevron-left" *ngIf="showChevronLeft"></i>
+                    <i class="fa-solid fa-chevron-down px-1" *ngIf="showChevronDown"></i>
+                </a>
+                <!--============================-->
+                <!-- SUBMENU GESTION TRABAJO-->
+                <ul #subMenuWorkManagement class="hidden space-y-2 text-zinc-700">
+                    <li *ngFor="let gestionDeTrabajo of GestionDeTrabajo | ObjToArray">
+                        <a routerLink="" type="button"
+                            class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
+                            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                            <i class="{{ gestionDeTrabajo.icon }}"></i>
+                            <span class="ml-5">{{ gestionDeTrabajo.name }}</span>
+                        </a>
+                    </li>
+                </ul>
+                <!--END SUBMENU GESTION DE TRABAJO-->
+                <!--============================-->
+            </li>
+            <!--END MENU GESTION DE TRABAJO-->
+            <!--============================-->
+
+            <!--============================-->
+            <!-- MENU PLANIFICACION-->
+            <li>
+                <a routerLink="" type="button" (click)="dropdownPlanificationMenu()"
+                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <div>
+                        <i class="fa-solid fa-box-archive"></i>
+                        <span class="ml-3">Planificación</span>
+                    </div>
+                    <i class="fa-solid fa-chevron-left" *ngIf="showChevronLeft"></i>
+                    <i class="fa-solid fa-chevron-down px-1" *ngIf="showChevronDown"></i>
+                </a>
+                <!--============================-->
+                <!-- SUBMENU PLANIFICACION-->
+                <ul #subMenuPlanification class="hidden space-y-2 text-zinc-700" >
+                    <li *ngFor="let planificacion of Planificacion | ObjToArray">
+                        <a routerLink="" type="button"
+                            class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
+                            aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                            <i class="{{ planificacion.icon }}"></i>
+                            <span class="ml-5">{{ planificacion.name }}</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- END SUBMENU PLANIFICACION-->
+                <!--============================-->
+            </li>
+            <!-- END MENU PLANIFICACION-->
+            <!--============================-->
+            <li>
+                <a routerLink="" type="button"
+                    class="flex items-center w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <i class="fa-solid fa-print"></i>
                     <span class="ml-3">Reportes</span>
-            </a>
-        </li>
-    </ul>
-    <!--END MENU DEL SIDENAV-->
-    <!--============================-->
-  </div>
+                </a>
+            </li>
+        </ul>
+        <!--END MENU DEL SIDENAV-->
+        <!--============================-->
+    </div>
 </aside>
