--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<aside #SideNav class="w-64 h-screen bg-white bottom-0">
+<aside #SideNav class="h-screen bg-white bottom-0 transition-all {{ open? 'w-64' : 'w-0' }}">
     <div class="overflow-y-auto h-screen py-4 px-3 rounded-r">
         <!--============================-->
         <!--MENU DEL SIDENAV-->
