--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,8 +1,8 @@
 <div id="" class="relative flex w-full z-10 bg-gray-200">
-    <app-side-nav></app-side-nav>
-    <app-header></app-header>
+    <app-side-nav [open]="sidenavOpen"></app-side-nav>
+    <app-header [sidenavOpen]="sidenavOpen" (sidenav)="sidenavOpen = !sidenavOpen"></app-header>
     <app-footer></app-footer>
-    <div class="absolute _ind overflow-y-scroll left-64 right-0 top-16 bottom-16">
+    <div class="absolute _ind overflow-y-scroll right-0 top-16 bottom-16 transition-all {{ sidenavOpen? 'left-64' : 'left-0' }}">
         <!-- <app-information-panel></app-information-panel> -->
         <app-facturas></app-facturas>
     </div>
