--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,7 +1,7 @@
 <div id="" class="relative flex w-full z-10 bg-gray-200">
     <app-side-nav [open]="sidenavOpen"></app-side-nav>
     <app-header [sidenavOpen]="sidenavOpen" (sidenav)="sidenavOpen = !sidenavOpen"></app-header>
-    <app-footer></app-footer>
+    <app-footer [sidenavOpen]="sidenavOpen"></app-footer>
     <div class="absolute _ind overflow-y-scroll right-0 top-16 bottom-16 transition-all {{ sidenavOpen? 'left-64' : 'left-0' }}">
         <!-- <app-information-panel></app-information-panel> -->
         <app-facturas></app-facturas>
