--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,69 +1,83 @@
-<div class="flex justify-start items-center absolute top-0 right-0 w-auto h-16 bg-stone-100 transition-all {{ sidenavOpen? 'left-64' : 'left-0' }}">
-    <div #AsSideNav class="flex justify-start ml-3 p-2 cursor-pointer" (click)="sidenav.emit()">
-        <i class="fa-solid fa-bars"></i>
+<div class="flex justify-between items-center absolute top-0 right-0 w-auto h-16 bg-stone-100 transition-all {{ sidenavOpen? 'left-64 ease-in-out delay-150' : 'left-0' }}">
+    <div class="flex justify-center content-center items-center">
+        <!--LOGO-->
+        <a routerLink="" class="flex justify-center items-center w-full px-5 py-2  {{ sidenavOpen? 'hidden' : 'transition ease-in-out delay-150 ' }}">
+            <img src="../../../assets/logo-billfast.png" class="w-9 h-9" />
+            <span class="ml-3 text-lg">BillFast</span>
+        </a>
+        <!--END LOGO-->
+
+        <!--MENU HAMBURGUESA-->
+        <div #AsSideNav class="flex justify-start ml-3 p-2 cursor-pointer" (click)="sidenav.emit()">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <!--END MENU HAMBURGUESA-->
     </div>
-    <div class="flex justify-end items-center space-x-5 w-full px-5 lg:text-sm">
-        <!--IDIOMAS-->
-        <a routerLink="" (click)="toogleLanguageMenu()">
-            <span class="text-gray-500 hover:text-black">Español (República Dominicana)</span>
-            <!--DROPDOWN IDIOMAS-->
-            <ul #AsDropdown *ngIf="isLanguageMenuOpened" class="absolute flex flex-col w-56 text-xs space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-60 rounded">
+
+    <div>
+        <div class="flex justify-end items-center space-x-5 w-full px-5 lg:text-sm">
+            <!--IDIOMAS-->
+            <a routerLink="" (click)="toogleLanguageMenu()">
+                <span class="text-gray-500 hover:text-black">Español (República Dominicana)</span>
+                <!--DROPDOWN IDIOMAS-->
+                <ul #AsDropdown *ngIf="isLanguageMenuOpened" class="absolute flex flex-col w-56 text-xs space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-60 rounded">
+                    <li>
+                        <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
+                            <i class="fa-brands fa-canadian-maple-leaf"></i>
+                            <span class="ml-5 ">English</span>
+                        </a>
+                    </li>
+                     <li>
+                        <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
+                            <i class="fa-brands fa-font-awesome"></i>
+                            <span class="ml-5 ">Español (República Dominicana)</span>
+                        </a>
+                    </li>
+                </ul>
+                <!--END DROPDOWN IDIOMAS-->
+            </a>
+            <!--END IDIOMAS-->
+    
+            <!--USER-->
+            <a routerLink="" class="justify" (click)="toggleUserMenu()">
+            <div class="flex justify-start items-center">
+                    <span class="mr-5 text-gray-500 hover:text-black">Nasser Emil Issa Tavares</span>
+                    
+                    <div class="flex bg-white rounded-full w-10 h-10 justify-center items-center content-center m-0">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                </div>
+            </a>
+            <!--END USER-->
+            <!--DROPDOWN USER-->
+            <ul #AsDropdown *ngIf="isUserMenuOpened" class="absolute flex flex-col w-36 space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-6 rounded text-xs">
                 <li>
                     <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
-                        <i class="fa-brands fa-canadian-maple-leaf"></i>
-                        <span class="ml-5 ">English</span>
+                        <i class="fa-solid fa-user"></i>
+                        <span class="ml-5">Profile</span>
                     </a>
                 </li>
-                 <li>
+                <li>
                     <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
-                        <i class="fa-brands fa-font-awesome"></i>
-                        <span class="ml-5 ">Español (República Dominicana)</span>
+                        <i class="fa-solid fa-gears"></i>
+                        <span class="ml-5">Settings</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
+                        <i class="fa-solid fa-eye"></i>
+                        <span class="ml-5">Audit Log</span>
+                    </a>
+                </li>
+                <hr class="w-full">
+                <li>
+                    <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                        <span class="ml-5">Logout</span>
                     </a>
                 </li>
             </ul>
-            <!--END DROPDOWN IDIOMAS-->
-        </a>
-        <!--END IDIOMAS-->
-
-        <!--USER-->
-        <a routerLink="" class="justify" (click)="toggleUserMenu()">
-        <div class="flex justify-start items-center">
-                <span class="mr-5 text-gray-500 hover:text-black">Nasser Emil Issa Tavares</span>
-                
-                <div class="flex bg-white rounded-full w-10 h-10 justify-center items-center content-center m-0">
-                    <i class="fa-solid fa-user"></i>
-                </div>
-            </div>
-        </a>
-        <!--END USER-->
-        <!--DROPDOWN USER-->
-        <ul #AsDropdown *ngIf="isUserMenuOpened" class="absolute flex flex-col w-36 space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-6 rounded text-xs">
-            <li>
-                <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
-                    <i class="fa-solid fa-user"></i>
-                    <span class="ml-5">Profile</span>
-                </a>
-            </li>
-            <li>
-                <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
-                    <i class="fa-solid fa-gears"></i>
-                    <span class="ml-5">Settings</span>
-                </a>
-            </li>
-            <li>
-                <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
-                    <i class="fa-solid fa-eye"></i>
-                    <span class="ml-5">Audit Log</span>
-                </a>
-            </li>
-            <hr class="w-full">
-            <li>
-                <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
-                    <i class="fa-solid fa-right-to-bracket"></i>
-                    <span class="ml-5">Logout</span>
-                </a>
-            </li>
-        </ul>
-        <!--END DROPDOWN USER-->
+            <!--END DROPDOWN USER-->
+        </div>
     </div>
 </div>
