--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -6,7 +6,7 @@
             <!--============================-->
             <!--LOGO-->
             <li>
-                <a routerLink="" class="flex items-center justify-start w-full px-5 mb-5">
+                <a routerLink="" class="flex items-center justify-start w-full px-5 mb-5 cursor-pointer">
                     <img src="../../../assets/logo-billfast.png" class="w-9 h-9" />
                     <span class="ml-3 text-lg">BillFast</span>
                 </a>
@@ -18,7 +18,7 @@
             <!--PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
             <li>
                 <a routerLink=""
-                    class="flex items-center justify-between w-full px-5 py-2 mb-5 rounded transition duration-75 group hover:bg-gray-300">
+                    class="flex items-center justify-between w-full px-5 py-2 mb-5 rounded transition duration-75 group hover:bg-gray-300 cursor-pointer">
                     <div>
                         <i class="fa-solid fa-table-cells"></i>
                         <span class="ml-3">Panel informativo</span>
@@ -46,7 +46,7 @@
                 </button>
                 <!--============================-->
                 <!--SUBMENU TRANSACCIONES-->
-                <ul #subMenuTransactions class="hidden space-y-2 text-zinc-700">
+                <ul #subMenuTransactions class="hidden space-y-2 text-zinc-700 cursor-pointer">
                     <li *ngFor="let transaccion of Transacciones | ObjToArray">
                         <a routerLink="" type="button"
                             class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
@@ -66,7 +66,7 @@
             <!--MENU CATALOGOS-->
             <li>
                 <a routerLink="" type="button" (click)="dropdownCatalogueMenu()"
-                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    class="flex cursor-pointer items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
                     aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                     <div>
                         <i class="fa-solid fa-box-archive"></i>
@@ -77,7 +77,7 @@
                 </a>
                 <!--============================-->
                 <!--SUBMENU CATALOGOS-->
-                <ul #subMenuCatalogue class="hidden space-y-2 text-zinc-700">
+                <ul #subMenuCatalogue class="hidden space-y-2 text-zinc-700 cursor-pointer">
                     <li *ngFor="let catalogo of Catalogos | ObjToArray">
                         <a routerLink="" type="button"
                             class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
@@ -97,7 +97,7 @@
             <!--MENU SERVICIO AL CLIENTE-->
             <li>
                 <a routerLink="" type="button" (click)="dropdownCustomerServiceMenu()"
-                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300">
+                    class="flex cursor-pointer items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 ">
                     <div>
                         <i class="fa-solid fa-face-smile"></i>
                         <span class="ml-3">Servicio al cliente</span>
@@ -107,7 +107,7 @@
                 </a>
                 <!--============================-->
                 <!-- SUBMENU SERVICIO AL CLIENTE-->
-                <ul #subMenuCustomerService class="hidden space-y-2 text-zinc-700" >
+                <ul #subMenuCustomerService class="hidden space-y-2 text-zinc-700 cursor-pointer" >
                     <li *ngFor="let servicioAlCliente of ServicioAlCliente | ObjToArray">
                         <a routerLink="" type="button"
                             class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
@@ -127,7 +127,7 @@
             <!--MENU GESTION TRABAJO-->
             <li>
                 <a routerLink="" type="button" (click)="dropdownWorkManagementMenu()"
-                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    class="flex cursor-pointer items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
                     aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                     <div>
                         <i class="fa-solid fa-box-archive"></i>
@@ -138,7 +138,7 @@
                 </a>
                 <!--============================-->
                 <!-- SUBMENU GESTION TRABAJO-->
-                <ul #subMenuWorkManagement class="hidden space-y-2 text-zinc-700">
+                <ul #subMenuWorkManagement class="hidden space-y-2 text-zinc-700 cursor-pointer">
                     <li *ngFor="let gestionDeTrabajo of GestionDeTrabajo | ObjToArray">
                         <a routerLink="" type="button"
                             class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
@@ -158,7 +158,7 @@
             <!-- MENU PLANIFICACION-->
             <li>
                 <a routerLink="" type="button" (click)="dropdownPlanificationMenu()"
-                    class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    class="flex cursor-pointer items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
                     aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                     <div>
                         <i class="fa-solid fa-box-archive"></i>
@@ -169,7 +169,7 @@
                 </a>
                 <!--============================-->
                 <!-- SUBMENU PLANIFICACION-->
-                <ul #subMenuPlanification class="hidden space-y-2 text-zinc-700" >
+                <ul #subMenuPlanification class="hidden space-y-2 text-zinc-700 cursor-pointer">
                     <li *ngFor="let planificacion of Planificacion | ObjToArray">
                         <a routerLink="" type="button"
                             class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500"
@@ -186,7 +186,7 @@
             <!--============================-->
             <li>
                 <a routerLink="" type="button"
-                    class="flex items-center w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
+                    class="flex cursor-pointer items-center w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300"
                     aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                     <i class="fa-solid fa-print"></i>
                     <span class="ml-3">Reportes</span>
